--- a/requirements.txt
+++ b/requirements.txt
@@ -15,7 +15,7 @@ nbformat
 
 # NLP / Embedding / Retrieval
 rank_bm25
-pinecone      # Correct package name for Pinecone
+pinecone==6.0.0      # Correct package name for Pinecone
 langchain             # Top-level package only
 
 # Document processing
@@ -27,4 +27,5 @@ pytesseract
 pdf2image
 pillow
 
-streamlit
+streamlit==1.45.1
+pyreadline3
